k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tg-bot
  labels:
    app: tg-bot
spec:
  ports:
    - name: https
      port: 8080
  selector:
    app: tg-bot
