k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-server
spec:
  rules:
    - host: host.ru
      http:
        paths:
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: tg-bot
                port:
                  number: 8080
